Redaguota iki 5 skyriaus.

--- a/oltp.tex
+++ b/oltp.tex
@@ -48,7 +48,7 @@ Vienas aktualiausių tiesioginio transakcijų apdorojimo sistemų ypatumų - rea
 Online transactional processing (OLTP) is designed to efficiently process high volumes of transactions, instantly recording business events (such as a sales invoice payment) and reflecting changes as they occur.
 \end{comment}
 
-Tiesioginio transakcijų apdorojimo (toliau OLTP\footnote{OLTP - dažnai naudojamas sutrumpinimas angliškam terminui ,,Online Transction Processing``, kuris reiškia ,,tiesioginis transakcijų apdorojimas``}) (angl. Online Transactional Processing) sistemos - sistemos, kurios palaiko operacinio lygio veiksmus t.y. registruoja kasdienines rutinines verslo operacijas, būtinas verslo sistemai funkcionuoti, o jų esminis bruožas yra realaus laiko\footnote{Realaus laiko arba tikralaikis(-ė) (angl. real time) - vykstantis kompiuteryje ir sąveikaujantis su tuo pat metu vykstančiais procesais kompiuterio išorėje.\cite{DGJ08}} veika.
+Tiesioginio transakcijų apdorojimo (toliau OLTP\footnote{OLTP - trumpinys angl. Online Transaction Processing - tiesioginis transakcijų apdorojimas.}) (angl. Online Transactional Processing) sistemos - sistemos, kurios palaiko operacinio lygio veiksmus t.y. registruoja kasdienines rutinines verslo operacijas, būtinas verslo sistemai funkcionuoti, o jų esminis bruožas yra realaus laiko\footnote{Realaus laiko arba tikralaikis(-ė) (angl. real time) - vykstantis kompiuteryje ir sąveikaujantis su tuo pat metu vykstančiais procesais kompiuterio išorėje.\cite{DGJ08}} veika.
 
 Pagrindinės OLTP sistemos dalys yra:
 \begin{itemize}
@@ -139,7 +139,17 @@ Realaus laiko veika reiškia, kad su OLTP sistema sąveikaujantys agentai tikisi
 
 \section{OLTP palyginimas su OLAP sistemomis}
 
-Čia įdėsim aprašymą didžiųjų skirtumų iš http://krisvenky.tripod.com/id13.html
+Labai dažnai IT srities žmonės painioja arba tiesiog nežino koks yra skirtumas tarp OLTP ir OLAP\footnote{OLAP - trumpinys angl. OnLine Analytical Processing - tiesioginis analitinis apdorojimas.} sistemų. Šiame skyriuje stengsiuosi apžvelgti esminius šių sistemų skirtumus.
+
+\subsection{OLAP sistemos}
+
+Anglų kalboje trumpinys OLAP siejamas su OnLine Analytical Processing sąvoka. Šis terminas naudojamas norint apibūdinti programinius produktus, kurie leidžia visapusiškai analizuoti verslo informaciją realiuoju laiku. Sąveika su tokiomis sistemomis vyksta interaktyviai, atsakymai net į daug skaičiavimų reikalaujančias užklausas gaunami per kelias sekundes. Galutinė informacija gali būti pateikta ne tik skaičiais, bet ir lengviau vartotojui suvokiamu grafiniu pavidalu.
+
+Dauguma OLAP produktų pasižymi draugiška vartotojui aplinka, o kreipiantis į duomenų šaltinius reikiamą verslo informaciją galima gauti net ir nežinant, kaip rašyti sudėtingas užklausas.[IDA03]
+
+Viena svarbiausių ir OLTP, ir OLAP sistemų dalių yra vieno ar kito tipo duomenų bazės. OLTP sistemose paprastai yra reliacinė duomenų bazė, o OLAP yra naudojami duomenų sandėliai.
+
+%Čia įdėsim aprašymą didžiųjų skirtumų iš http://krisvenky.tripod.com/id13.html
 
 \subsection{Kas yra duomenų sandėliai?}
 
@@ -147,19 +157,18 @@ Duomenų sandėlis (angl. Data Warehouse) yra tiesiog viena, užbaigta (angl. co
 
 Duomenų sandėlis yra
 \begin{itemize}
-  \item Specifiškos paskirties (angl. Subject - oriented);
-  \item Integruotas, suderintas (angl. Integrated);
-  \item Nuo laiko priklausantis (angl. Time-varying) (sistemos darbo rezultatai priklausomi nuo to, kokiu laiko momentu sistema dirba. Šiuo atveju nuo sandėlyje esančių duomenų, nes jie laikas nuo laiko yra papildomi);
-  \item Ne laikinas (angl. Non-volatile).
+  \item Specifiškos paskirties (angl. subject-oriented);
+  \item Integruotas, suderintas (angl. integrated);
+  \item Nuo laiko priklausantis (angl. time-varying) (sistemos darbo rezultatai priklausomi nuo to, kokiu laiko momentu sistema dirba. Šiuo atveju nuo sandėlyje esančių duomenų, nes jie laikas nuo laiko yra papildomi);
+  \item Ne laikinas (angl. non-volatile).
 \end{itemize}
-
 duomenų rinkinys, kurio pirminis tikslas yra \textbf{organizuotas sprendimų priėmimas} (paremtas verslo sukauptais duomenimis).
 
 Pagrindinės duomenų sandėliu besinaudojančių programų klasės:
 \begin{itemize}
-  \item OLAP (angl. OnLine Analytical Processing) programos;
-  \item Duomenų gavybos (angl. Data Mining) programos;
-  \item Vizualizavimo (angl. Visualization) programos.
+  \item OLAP programos;
+  \item Duomenų gavybos (angl. data mining) programos;
+  \item Vizualizavimo (angl. visualization) programos.
 \end{itemize}
 
 Duomenų sandėliai turi tris veiklos lygius:
@@ -169,12 +178,12 @@ Duomenų sandėliai turi tris veiklos lygius:
   \item Duomenų pasiekimo lygis (angl. access).
 \end{enumerate}
 
-Alternatyvus duomenų sandėlio (angl. Data Warehouse) apibrėžimas – duomenų bazė skirta ruošti ataskaitas ir duomenų analizę bei ilgalaikiam duomenų saugojimui. Duomenys į duomenų sandėlį yra pakraunami iš sistemų naudojamų kasdienėm transakcijoms, t.y. OLTP sistemų. 
+Alternatyvus duomenų sandėlio apibrėžimas – duomenų bazė skirta ruošti ataskaitas ir duomenų analizę bei ilgalaikiam duomenų saugojimui. Duomenys į duomenų sandėlį yra pakraunami iš sistemų naudojamų kasdienėms transakcijoms, t.y. OLTP sistemų. 
 
-\subsection{OLTP ir duomenų sandėlių skirtumai}
+\subsection{OLTP ir duomenų sandėlių skirtumai
 
 \begin{longtable}{|p{3cm}|p{4.9cm}|p{4.9cm}|}
-\caption{OLTP sistemų ir duomenų sandėlių savybių palyginimas \label{table:oltpsvsdw}}\\
+\caption{OLTP sistemų ir duomenų sandėlių savybių palyginimas\label{table:oltpsvsdw}\cite{DWC02}}}\\
 %This is the header for the first page of the table...
 
 \hline \hline
@@ -213,7 +222,7 @@ Operacijos pagal poreikį.
 \hline
 Duomenų redagavimas
 &
-Visada turi naujausius duomenis ir reaguoja į kiekvieną transakciją. Galutiniai vartotojai nuolat modifikuoja DB.
+Visada turi naujausius duomenis ir duomenys dažniausiai keičiami su kiekviena transakcija. Galutiniai vartotojai nuolat modifikuoja DB.
 &
 Reguliarus atnaujinimas pagal ETL (angl. Extract, Transform, Load) procesus. Galutinis naudotojas tiesiogiai nekeičia DB būsenos.
 \\
@@ -227,7 +236,7 @@ Denormalizuota – optimizuota keletui svarbiausių operacijų.
 \hline
 Užklausų (angl. Queries) tipai
 &
-Užklausos naudoja nedaug ir tik reikalingus DB įrašus. Tipinė užklausa: „Gauti paskutinio kliento užsakymo duomenis“
+Užklausos naudoja nedaug ir tik reikalingus DB įrašus. Tipinė užklausa: ,,Gauti paskutinio kliento užsakymo duomenis``
 &
 Užklausos skenuoja tūkstančius arba milijonus eilučių. Tipinė užklausa: ,,Rasti sumą visų praėjusio mėnesio pasdavimų``
 \\
@@ -241,7 +250,7 @@ Daug istorinių duomenų (mėnesiai, metai). To reikia, kad būtų galima atlikt
 
 \subsection{Skirtumų apibendrinimas}
 
-Duomenų sandėliuose yra saugomi duomenys sugeneruoti OLTP sistemose, kuriuos prieš sukraunant į duomenų sandėlį reikia surinkti iš daugelio šaltinių, apdoroti ir pakrauti. Duomenų sandėliai yra skirti atlikti verslo duomenų analizes, tendencijų ieškojimui ir kitoms darbui su istoriniais duomenimis susijusioms operacijoms, o OLTP sistemos skirtos naujausių verslo duomenų apdorojimui.
+Duomenų sandėliuose yra saugomi duomenys sugeneruoti OLTP sistemose, kuriuos prieš sukraunant į duomenų sandėlį reikia surinkti iš daugelio šaltinių, apdoroti ir pakrauti. Duomenų sandėliai yra skirti verslo duomenų analizės atlikimui, tendencijų ieškojimui ir kitoms darbui su istoriniais duomenimis susijusioms operacijoms, o OLTP sistemos skirtos naujausių verslo duomenų apdorojimui.
 
 \begin{figure}[htb]
 \begin{center}
@@ -249,7 +258,7 @@ Duomenų sandėliuose yra saugomi duomenys sugeneruoti OLTP sistemose, kuriuos p
 \includegraphics[width=1\textwidth]{oltp_olap.png}
 \end{center}
 \caption{OLTP ir duomenų sandėlio struktūrinė schema.}
-\label{fig:awesome_image}
+\label{fig:oltp_olap}
 \end{figure}
 
 \newpage
@@ -258,28 +267,28 @@ Duomenų sandėliuose yra saugomi duomenys sugeneruoti OLTP sistemose, kuriuos p
 
 Vis daugiau ir daugiau programų šiandien veikia tiesiog interneto naršyklėje:
 \begin{itemize}
-  \item Internetinės parduotuvės (pvz. „iTunes“);
-  \item Elektroninio pašto klientai (pvz. „Gmail“);
-  \item Socialinės programos (pvz. „Facebook“);
-  \item Duomenų apdorojimo programos (pvz. „Google Docs“);
-  \item Žaidimai (pvz. „Angry Birds“);
-  \item Verslo sistemos (pvz. „erpnext“) ir t.t.
+  \item Internetinės parduotuvės (pvz. ,,iTunes``);
+  \item Elektroninio pašto klientai (pvz. ,,Gmail``);
+  \item Socialinės programos (pvz. ,,Facebook``);
+  \item Duomenų apdorojimo programos (pvz. ,,Google Docs``);
+  \item Žaidimai (pvz. ,,Angry Birds``);
+  \item Verslo sistemos (pvz. ,,erpnext``) ir t.t.
 \end{itemize}
 
-Tačiau, kad ir kokį gerą interneto ryšį turėtume, mes negalima garantuoti, kad mes juo visada galėsime naudotis, o jei ir galėsime, galbūt jis tiesiog bus nepakankamas, kad galėtume naudotis patogiai, pvz. naudojamės mobiliuoju internetu, tačiau nuvažiavus į kalnus ryšio signalas tampa labai silpnas, smarkiai sumažėja mobilaus interneto greitis ir mes nebegalime išnaudoti kelių leisvų minučių žaisdami savo pamėgtojo „Angry Birds“ žaidimo internetinės versijos. Žinoma, kad dažniausiai galime turėti panašios paskirties programą pilnai įrašytą į kompiuterio atmintį, bet pasaulinė tendencija yra tokia, kad stipriai populiarėja taip vadinama „debesų kompiuterija“ (angl. Cloud computing) ir su ja susiję programiniai sprendimai. Atsiranda realus poreikis turėti mišraus veikimo programas tokias, kurių prigimtis yra internetinė, tačiau jos gali viekti ir nesant arba esant tik labai silpnam interneto ryšiui. 
+Tačiau, kad ir kokį gerą interneto ryšį turėtume, mes negalima garantuoti, kad mes juo visada galėsime naudotis, o jei ir galėsime, galbūt jis tiesiog bus nepakankamas, kad galėtume naudotis patogiai, pvz. naudojamės mobiliuoju internetu, tačiau nuvažiavus į kalnus ryšio signalas tampa labai silpnas, smarkiai sumažėja mobilaus interneto greitis ir mes nebegalime išnaudoti kelių leisvų minučių žaisdami savo pamėgtojo ,,Angry Birds`` žaidimo internetinės versijos. Žinoma, kad dažniausiai galime turėti panašios paskirties programą pilnai įrašytą į kompiuterio atmintį, bet pasaulinė tendencija yra tokia, kad stipriai populiarėja taip vadinama „debesų kompiuterija“ (angl. Cloud computing) ir su ja susiję programiniai sprendimai. Atsiranda realus poreikis turėti mišraus veikimo programas tokias, kurių prigimtis yra internetinė, tačiau jos gali viekti ir nesant arba esant tik labai silpnam interneto ryšiui. 
 
-Pradinė interneto naršyklių idėja buvo peržiūrėti duomenis esančius kažkur nutolusiame interneto serveryje, o tam būtinai reikia interneto ryšio. Kaip jau minėjome anksčiau, yra poreikis peržiūrėti tuos pačius duomenis ir kai nėra interneto ryšio. Kyla problema, kaip pasiekti nepasiekiamus duomenis? Sprendimas yra gana paprastas – reikia padaryti duomenis visada pasiekiamus - įrašyti būtinus internetinės aplikacijos duomenis vartotojo kompiuteryje. (Bet tada interneto naršyklė tampa nebe interneto naršykle, o tiesiog naršykle, nes gali naršyti, ne tik internetą, bet ir (kažkokiame lygyje) kliento kompiuterį.) Technologijų leidžiančių tokias programas kurti jau yra, kaip jau minėta, yra ir poreikis tokioms programoms. Kita darbo dalis bus susijusi su istorine apžvalga bei raidos perspektyvomis technologijų, leidusių įrašyti duomenis į kliento kietajį diską ir taip leidusių dalį internetinės aplikacijos veikimo perkelti į kliento kompiuterį. 
+Pradinė interneto naršyklių idėja buvo peržiūrėti duomenis esančius kažkur nutolusiame interneto serveryje, o tam būtinai reikia interneto ryšio. Kaip jau minėjome anksčiau, yra poreikis peržiūrėti tuos pačius duomenis ir kai nėra interneto ryšio. Kyla problema, kaip pasiekti nepasiekiamus duomenis? Sprendimas yra gana paprastas – reikia padaryti duomenis visada pasiekiamus - įrašyti būtinus internetinės programos duomenis vartotojo kompiuteryje. (Bet tada interneto naršyklė tampa jau nebe interneto naršykle, o tiesiog naršykle, nes gali naršyti, ne tik internetą, bet ir (kažkokiame lygyje) kliento kompiuterį.) Technologijų leidžiančių tokias programas kurti jau yra, kaip jau minėta, yra ir poreikis tokioms programoms. Kita darbo dalis bus susijusi su istorine apžvalga bei raidos perspektyvomis technologijų, leidusių įrašyti duomenis į kliento kietajį diską ir taip leidusių dalį internetinės programos veikimo perkelti į kliento kompiuterį. 
 
 \section{Senesnės technologijos internetinių programų duomenų saugojimui kliento kompiuteryje}
 
-\subsection{Slapukai (angl. cookies)}
+\subsection{Slapukai}
 
-Interneto svetainės naudoja slapukus, kad galėtų pasiūlyti personalizuotą naudojimo patirtį vartotojams ir surinkti informaciją apie svetainės naudojimą. Daugelis svetainių taip pat naudoja slapukus, kad galėtų saugoti informaciją, kuri padeda nuosekliai naudoti svetainės dalis, pvz., parduotuvės krepšelį arba tinkintus puslapius. Patikimoje svetainėje slapukas gali pagerinti darbą leisdamas svetainei sužinoti kliento prioritetus arba praleisti prisijungimo etapą kaskart, kai einate į jau lankytą interneto svetainę. Tačiau kai kurie slapukai, pvz., įrašyti reklaminių antraščių, gali kelti grėsmę privatumui ir sekti lankomas svetaines.
+Interneto svetainės naudoja slapukus (angl. cookies), kad galėtų pasiūlyti personalizuotą naudojimo patirtį vartotojams ir surinkti informaciją apie svetainės naudojimą. Daugelis svetainių taip pat naudoja slapukus, kad galėtų saugoti informaciją, kuri padeda nuosekliai naudoti svetainės dalis, pvz., parduotuvės krepšelį arba tinkintus puslapius. Patikimoje svetainėje slapukas gali pagerinti darbą leisdamas svetainei sužinoti kliento prioritetus arba praleisti prisijungimo etapą kaskart, kai einate į jau lankytą interneto svetainę. Tačiau kai kurie slapukai, pvz., įrašyti reklaminių antraščių, gali kelti grėsmę privatumui ir sekti lankomas svetaines.
 
-Slapukų idėja yra gana sena – ji kilo Lou Montulli, o  pirma slapukų specifikacija išleista 1994 metais spalio 13. Technologijos tikslas – kliento kompiuteryje saugoti informaciją susijusią su naršymu tinklalapyje. Tuo metu, kada atsirado cookies, daugelis web aplikacijų juos naudodavo tik su identifikacija susijusių duomenų saugojimui, kai tuo tarpu visi kiti duomenys susiję su klientu buvo saugomi serveryje. Kadangi cookie‘s yra tekstiniai jie nėra vykdomieji failai, todėl jie negali daugintis ir negali būti virusais. Naršyklė serveriui siunčia tik „rakto -> reikšmės“ (angl. „name<->value“) porą, o visi kiti atributai yra naudojami cookie ištrynimo datai apskaičiuoti. Duomenų, saugomų cookies pavidalu kiekis yra labia mažas, tačiau tai vis tiek yra offline starage klasės technologija.
+Slapukų idėja yra gana sena – ji kilo Lou Montulli, o  pirma slapukų specifikacija išleista 1994 metais spalio 13. Technologijos tikslas – kliento kompiuteryje saugoti informaciją susijusią su naršymu tinklalapyje. Tuo metu, kada atsirado slapukai, daugelis internetinių programų juos naudodavo tik su identifikacija susijusių duomenų saugojimui, kai tuo tarpu visi kiti duomenys susiję su klientu buvo saugomi serveryje. Kadangi slapukai yra tekstiniai jie nėra vykdomieji failai, todėl jie negali daugintis ir negali būti virusais. Naršyklė serveriui siunčia tik „rakto -> reikšmės“ (angl. ,,name->value``) porą, o visi kiti atributai yra naudojami slapuko ištrynimo datai apskaičiuoti. Duomenų, saugomų slapukų pavidalu, kiekis yra labai mažas, tačiau tai vis tiek yra ,,atjungtos atmintnės`` (angl. offline storage) klasės technologija.
 
 \begin{longtable}{|p{4cm}|p{8.8cm}|}
-\caption{Slapukų rūšys \label{table:slapuku_rušys}}\\
+\caption{Slapukų rūšys \label{table:slapuku_rusys}}\\
 %This is the header for the first page of the table...
 
 \hline \hline
@@ -307,66 +316,66 @@ Slapukų idėja yra gana sena – ji kilo Lou Montulli, o  pirma slapukų specif
 \hline \hline
 \endlastfoot
 \hline 
-Laikinieji arba seanso  (angl. Session Cookie)
+Sesijos arba seanso  (angl. Session)
 &
 Tokio tipo slapukas yra aktyvus tol kol, klientas prisijungęs prie portalo arba, jei nustatyta, gali gyvuoti dar tam tikrą laiko tarpą iki kito puslapio aplankymo, bet, jei apsilankymas neįvyksta per tam tikrą laiką, jis automatiškai yra ištrinamas.
 \\
 \hline
-Nuolatiniai arba įrašytieji (angl. Persistent Cookie)
+Ilgaliakiai (angl. Persistent)
 &
 Kiekvieną kartą klientui prisijugus prie serverio slapukas yra siunčiamas klientui, taip galima skaičiuoti, kiek kartų vartotojas apsilankė portale.
 \\
 \hline
-Saugusis (angl. Secure Cookie)
+Saugusis (angl. Secure)
 &
-Naudojamas tik jungiantis per httpsi protokolą ir slapuko turinys yra užšifruotas tam, kad būtų mažesnė tikimybė nukentėti nuo duomenų vagystės.
+Naudojamas tik jungiantis per ,,https``\footnote{HTTPS - angl. HyperText Transfer Protocol Secure} protokolą ir slapuko turinys yra užšifruotas tam, kad būtų mažesnė tikimybė nukentėti nuo duomenų vagystės.
 \\
 \hline
-Tik http (angl. HttpOnly Cookie)
+Tik http (angl. HttpOnly)
 &
 Šiuo slapuku gali naudotis tik HTTP (ar HTTPS) tipo jungtis ir slapuko turinys yra nepasiekiamas kliento skriptams, taip slapukas yra apsaugotas nuo skriptinių atakų.
 \\
 \hline
-Trečiosios šalies (angl. Third-Party Cookie)
+Trečiosios šalies (angl. Third-Party)
 &
 Šio tipo slapukai gaunami iš kitų svetainių reklaminių skelbimų (pvz., iššokančių reklamų arba reklaminių antraščių), esančių rodomoje svetainėje. Svetainės gali naudoti šiuos slapukus rinkodaros tikslais ir žiniatinklio naudojimui sekti.
 \\
 \hline
-Super (angl. Super Cookie)
+Super (angl. Super)
 &
 Įrašo tik aukšto lygio domenus „.com“ ir tokiu būdu gali trikdyti naudojimąsi internetu. Naršyklės turi sąrašus neleistinų super slapukų, kuris yra nuolat atnaujinamas.
 \\
 \hline
-Zombis (angl. Zombie Cookie)
+,,Zombis`` (angl. Zombie)
 &
-Šio tipo slapukai atsikuria save po to kai buvo ištrinti (atkuriantis skriptas gali būti laikomas Flash lokalių duomenų saugykloje).
+Šio tipo slapukai atsikuria save po to kai buvo ištrinti (atkuriantis skriptas gali būti laikomas ,,Flash`` lokalioje bendro naudojimo duomenų saugykloje).
 \end{longtable}
 
 \subsection{JavaScript ir failai vartotojo kompiuteryje}
 
-JavaScript – objektiškai orientuota skriptų programavimo kalba. Ji dažniausiai yra naudojama internetinių puslapių interaktyvumo realizacijai. Javascript kodas negali pasiekti kliento kompiuterio failų sistemos. JavaScript kodas gali manipuliuoti failais kurie buvo įtempti (angl. Drag and Drop) į naršyklę. Taip pat yra galimybė įrašyti failą į kompiuterio atmintį, tačiau klientas turi užbaigti išsaugojimo (angl. Sava As..) dialogą. Taip yra dėl to, kad JavaScript kodas veikia savotiškame smėlio dėžės (angl. Sandbox) režime. Smėio dėžės režimas naudojamas kaip būdas apsaugoti kliento kompiuterį nuo kenksmingų internetinių atakų.
+JavaScript – objektiškai orientuota skriptų programavimo kalba. Ji dažniausiai yra naudojama internetinių puslapių interaktyvumo realizacijai. Javascript kodas negali pasiekti kliento kompiuterio failų sistemos. JavaScript kodas gali manipuliuoti failais kurie buvo įtempti (angl. Drag and Drop) į naršyklę. Taip pat yra galimybė įrašyti failą į kompiuterio atmintį, tačiau klientas turi užbaigti išsaugojimo (angl. Sava As..) dialogą. Taip yra dėl to, kad JavaScript kodas veikia savotiškame smėlio dėžės (angl. sandbox) režime. Smėio dėžės režimas naudojamas kaip būdas apsaugoti kliento kompiuterį nuo kenksmingų internetinių atakų.
 
-Nors JavaScript kodas veikia smėlio dėžės režimu, tačiau su tokiu režimu derinasi ir su internetiniu domenu susijusios lokalios failinės sistemos koncepsija. Ateityje turėtų atsirasti galimybė pilnai dirbti su failais susietais su konkrečiu domenu. Ši koncepsija leis kliento kompiueryje sukurti failinę strukturą, kuri bus pasiekiama per interneto naršyklę tik tada kai bus prisijungta prie domeno, kurio vardu toji failinė sistema buvo sukurta.
+Nors JavaScript kodas veikia smėlio dėžės režimu, tačiau su tokiu režimu derinasi ir su internetiniu domenu susijusios lokalios failinės sistemos koncepsija\cite{FIA10}. Ateityje turėtų atsirasti galimybė pilnai dirbti su failais susietais su konkrečiu domenu. Ši koncepsija leis kliento kompiueryje sukurti failinę strukturą, kuri bus pasiekiama per interneto naršyklę tik tada kai bus prisijungta prie domeno, kurio vardu toji failinė sistema buvo sukurta.
 
-\subsection{Papildiniais (angl. plugin) grįstos technologijos}
+\subsection{Papildiniais grįstos technologijos}
 
-Šiame skyriuje nagrinėsime technologijas leidžiančias web aplikacijoms pasiekti failus kliento kompiuteryje. Jų yra trys:
+Šiame skyriuje nagrinėsime papildiniais (angl. plugin) grįstas technologijas leidžiančias internetinėms programoms pasiekti duomenis kliento kompiuteryje. Jų yra trys:
 \begin{itemize}
-  \item Flash;
-  \item Java apletai;
-  \item ,,Google Gear``.
+  \item ,,Flash``;
+  \item Programėlės;
+  \item ,,Google Gears``.
 \end{itemize}
 
-Taip pat aptarsiu bendrus įskiepių naudojimo trūkumus, bei aprašysiu atskirų naršyklių bandymus dirbti su failų pasiekiamumu kliento atmintinėje.
+Taip pat aptarsiu bendrus papildinių naudojimo trūkumus, bei aprašysiu atskirų naršyklių bandymus dirbti su kliento kompiuteryje esančių duomenų pasiekiamumu.
 
 \subsubsection{,,Flash``}
 
-Nuo 6 Flash versijos atsirado “lokalaus bendro naudojimo objekto” (angl. Local shared object) koncepsija. Lokalus bendro naudojimo objektas dar yra vadinamas “Flash slapuku”, taip yra dėl to, kad jų paskirtis kaip ir paprastų slapukų yra saugoti duomenis susijusius su internetiniu puslapiu vartotojo kompiuteryje. Didžiausias skirtumas yra tas, kad lokalaus bendro naudojimo objektas yra sukuriamas tik puslapių naudojančių Flash technologijas ir lokaliai gali būti naudojamas tik Flash įskiepius turinčiose sistemose. Taip pat jų naudojimo nustatymai yra nepriklausomi nuo paprastųjų slapukų naudojimo nustatymų, tai reiškia, kad net, jei paprastieji slapukai yra griežtai draudžiami, lokalūs bendronaudojimo objektai gali būti naudojami. 
+Nuo 6 Flash versijos atsirado vietinio bendro naudojimo objekto” (angl. local shared object)\cite{LSO11} koncepsija. Vietinio bendro naudojimo objektas dar yra vadinamas “Flash slapuku”, taip yra dėl to, kad jų paskirtis kaip ir paprastų slapukų yra saugoti duomenis susijusius su internetiniu puslapiu kliento kompiuteryje. Didžiausias skirtumas yra tas, kad vietinio bendro naudojimo objektas yra sukuriamas tik puslapių naudojančių ,,Flash`` technologijas ir lokaliai gali būti naudojamas tik ,,Flash`` papildinius turinčiose sistemose. Taip pat jų naudojimo nustatymai yra nepriklausomi nuo paprastųjų slapukų naudojimo nustatymų, tai reiškia, kad net, jei paprastieji slapukai yra griežtai draudžiami, vietiniai bendro naudojimo objektai gali būti naudojami. 
 
-Saugomų duomenų pobūdis yra šiek tiek platesnis negu paprastų slapukų atveju. Dažniausiai yra saugomi vartotojo nustatymai. Jei yra naudojami standartiniai lokalaus bendro naudojimo objekto nustatymai, tuomet kliento nėra klausiama ar naudoti šio tipo atmintinę. Taip pat standartinis duomenų kiekis saugomas lokaliame bendro naudojimo objekte yra 100 kB, tačiau esant reikalui šis dydis gali būti keičiamas. 
+Saugomų duomenų pobūdis yra šiek tiek platesnis negu paprastų slapukų atveju. Dažniausiai yra saugomi vartotojo nustatymai. Jei yra naudojami standartiniai vietinio bendro naudojimo objekto nustatymai, tuomet kliento nėra klausiama ar naudoti šio tipo atmintinę. Taip pat standartinis duomenų kiekis saugomas vietiniame bendro naudojimo objekte yra 100 kB, tačiau esant reikalui šis dydis gali būti keičiamas. 
 
 \begin{longtable}{|p{6.4cm}|p{6.4cm}|}
-\caption{Lokalaus bendro naudojimo objekto privalumai ir trūkumai \label{table:flash}}\\
+\caption{Vietinio bendro naudojimo objekto privalumai ir trūkumai \label{table:flash}}\\
 %This is the header for the first page of the table...
 
 \hline \hline
@@ -401,36 +410,35 @@ Saugomų duomenų pobūdis yra šiek tiek platesnis negu paprastų slapukų atve
 \end{itemize}
 &
 \begin{itemize}
-  \item Mažai žinomas, todėl prastai kontroliuojamas;
-  \item Tik Google Chrome naršyklė turi modulius leidžiančius pilnai kontroliuoti veikimą;
+  \item Mažai žinomas, todėl prastai kontroliuojamas. Tik Google Chrome naršyklė turi modulius leidžiančius pilnai kontroliuoti veikimą;
   \item Įvairūs saugumo klausimai;
-  \item Gali būti naudojamas kenkėjiškai veiklai (Pavyzdžiui, lokalus bendro naudojimo objektas gali būti kaip atsarginė paprasto slapuko kopija skirta atkurti tą slapuką, kai jis yra ištrinamas);
+  \item Gali būti naudojamas kenkėjiškai veiklai (Pavyzdžiui, vietinis bendro naudojimo objektas gali būti kaip atsarginė paprasto slapuko kopija skirta atkurti tą slapuką, kai jis yra ištrinamas);
   \item Nėra globalus standartas;
 \end{itemize}
 \end{longtable}
-Nors ši technologija yra gana dažnai kritikuojama dėl saugumo problemų, ją kuriančios kompanijos Adobe Inc. vadovai nuolat pabrėžia, kad ši technologija nebuvo projektuojama kaip grėsmę galintis kelti įrankis. Tai galime matyti ir iš lokalaus bendro naudojimo objekto naudojimo schemos.
+Nors ši technologija yra gana dažnai kritikuojama dėl saugumo problemų, ją kuriančios kompanijos ,,Adobe Inc.`` vadovai nuolat pabrėžia, kad ši technologija nebuvo projektuojama kaip grėsmę galintis kelti įrankis. Tai galime matyti ir iš vietinio bendro naudojimo objekto naudojimo schemos.
 
 \begin{figure}[htb]
 \begin{center}
 \leavevmode
 \includegraphics[width=1\textwidth]{flash.png}
 \end{center}
-\caption{Lokalaus bendro naudojimo objekto naudojimo schema.}
+\caption{Vietinio bendro naudojimo objekto veikimo schema.}
 \label{fig:flash}
 \end{figure}
 
-\subsubsection{Java programėlės}
+\subsubsection{Programėlės}
 
-Viena iš Java programavimo kalbos galimybių yra apletų rašymas. Java apletai tai yra speciali Java programų grupė, kuri gali būti atsisiųsta iš internet ir įvykdyta aktyvų Java įskiepį turinčioje naršyklėje. Java kaip ir absoliuti dauguma programavimo kalbų turi galimybę skaityti ir rašyti failus į kliento kompiuterį. Apletų naudojimas yra patrauklus tuo, kad jie yra daug spartesni už JavaScript kodą, bei gali geriau išnaudoti kliento kompiuterio resursus. Dėl ypatingos apletų technologijos jie gali iškviesti JavaScript kodą, o savo rouštu JavaScript kodas gali iškviesti apletus. Kadangi apletai yra galingi tiek pat kaip ir kitos Java programos, jų naudojimą reikia riboti, nes dėl netinkamo jų naudojimo gali iškilti daugybė problemų, todėl patartina leisti įvykdyti apletus atsisiųstus tik iš patikimų internetinių puslapių. Java technologijų naudojimas gali būti išeitis, kai norima turėti galimybę dirbti su duomenis esančiais kliento kompiuteryje.
+Viena iš Java programavimo kalbos galimybių yra programėlių\cite{WJP01} rašymas. Java programėlės tai yra speciali Java programų grupė, kuri gali būti atsisiųsta iš interneto ir įvykdyta aktyvų Java įskiepį turinčioje naršyklėje. Java kaip ir absoliuti dauguma programavimo kalbų turi galimybę skaityti ir rašyti failus į kliento kompiuterį. Programėlių naudojimas yra patrauklus tuo, kad jie yra daug spartesni už JavaScript kodą, bei gali geriau išnaudoti kliento kompiuterio resursus. Dėl ypatingos programėlių technologijos jos gali iškviesti JavaScript kodą, o savo rouštu JavaScript kodas gali iškviesti programėles. Kadangi programėlės yra galingi tiek pat kaip ir kitos Java programos, jų naudojimą reikia riboti, nes dėl netinkamo jų naudojimo gali iškilti daugybė problemų, todėl patartina leisti įvykdyti apletus atsisiųstus tik iš patikimų internetinių puslapių. Java technologijų naudojimas gali būti išeitis, kai norima turėti galimybę dirbti su duomenis esančiais kliento kompiuteryje.
 
 \subsubsection{,,Google Gears``}
 
-„Google Gears“ interneto naršyklės įskiepis, kuris įgalina kurti funkcionalesnes web aplikacijas, kurių dalis funkcionalumo yra pasiekiama neprisijungus prie interneto ryšio.
-„Google Gears“ plėtojimas nutrūko, nes buvo nuspręsta turėtą įdirbį bei sukauptą patirtį investuoti į bendrų interneto standartų plėtojimą. Dauguma idėjų (lokali duomenų bazė, geolokacija ir t.t.), kurias plėtojant „Google Gears“ buvo pionierius, perima arba ateityje perims HTML5 ir kiti interneto standartai.
+,,Google Gears``\cite{STG11} interneto naršyklės papildinys, kuris įgalina kurti funkcionalesnes internetines programas, kurių dalis funkcionalumo yra pasiekiama neprisijungus prie interneto ryšio.
+,,Google Gears`` plėtojimas nutrūko, nes buvo nuspręsta turėtą įdirbį bei sukauptą patirtį investuoti į bendrų interneto standartų plėtojimą. Dauguma idėjų (vietinė SQL duomenų bazė, geolokacija ir t.t.), kurias plėtojant ,,Google Gears`` buvo pionierius, perima arba ateityje perims HTML5 ir kiti interneto standartai.
 
-\subsubsection{Papildinių naudojimo trūkumai}
+\subsubsection{Papildinių naudojimo ypatybės}
 
-Akivaizdžiausias trūkumas yra tai, kad aplikacijos kūrėjas turi tikėtis, kad klientas turėsis instaliuotą papildinį ir jis bus tinkamos naudoti versijos. Tačiau to tikėtis yra gana sudėtinga, nes pvz. Kompanijos neretai turi ugniasienes, kurios blokuoja papildinius, arba dar blogiau – papildiniai gali būti nepritaikyti veikti su visomis operacinėmis sistemomis. Dar daugiau, aplikacijų kūrėjas turi tikėtis, kad papildinius kurianti kompanija nenutrauks jų kūrimo, bei sieks jį populiarinti. Taipogi, yra grėsmė, kad papildiniais grįstas technologijas pakeis su jais nesuderinami atviri standartai, kas dabar ir vyksta.
+Akivaizdžiausias trūkumas yra tai, kad internetinės programos kūrėjas turi tikėtis, kad klientas turėsis įdiegtą papildinį ir jis bus tinkamos naudoti versijos. Tačiau to tikėtis yra gana sudėtinga, nes pvz. kompanijos neretai turi ugniasienes, kurios blokuoja papildinius, arba dar blogiau – papildiniai gali būti nepritaikyti veikti su visomis operacinėmis sistemomis. Dar daugiau, programų kūrėjas turi tikėtis, kad papildinius kurianti kompanija nenutrauks jų kūrimo, bei sieks jį populiarinti. Taipogi, yra grėsmė, kad papildiniais grįstas technologijas pakeis su jais nesuderinami atviri standartai, kas dabar ir vyksta.
 
 Tačiau gali būti ir tokių atvejų, kada papildinių naudojimas teiktų privalumus. Pavyzdžiui, įmonė sukūrė kažkokią paslaugą, kuri yra vertinga ir veikia kažkokio tai papildinio pagrindu. Jei klientams tikrai reikia tos paslaugos, tai jie gali įsidiegti reikalaujamus papildinius ir sėkmingai naudotis tomis paslaugomis. Tad papildinių naudojimas nors ir su akivaizdžiais savo trūkumais gali suteikti privalumų sunkiai pasiekiamų jų nenaudojant.
 
@@ -471,16 +479,16 @@ Darbo su kliento kompiuterio failine sistema specifinius modulius turi ir keleta
 \hline 
 ,,Internet Explorer``
 &
-,,UserData API``
+,,UserData API``\cite{UDA11}
 &
-Ši technologija leidžia saugoti ir naudoti duomenis tarp atskirų prisijungimų prie internetinės aplikacijos kliento duomenų saugykloje (angl. UserData Store). Technologija įgalina saugoti ir naudoti sudėtingas ir dinamiškas duomenų struktūras, kurių dydis yra didesnis negu leidžia slapukai. Kliento duomenų saugyklos dydis priklauso nuo to, kokiame saugumo lygyje yra dirbama, tačiau vidutiniai atminties dydžiai yra 128 KB per failą ir 1024 KB bendros atminties.
+Ši technologija leidžia saugoti ir naudoti internetinės programos duomenis tarp atskirų prisijungimų prie jos kliento duomenų atmintnėje (angl. UserData Store). Technologija įgalina saugoti ir naudoti sudėtingas ir dinamiškas duomenų struktūras, kurių dydis yra didesnis negu leidžia slapukai. Kliento duomenų atmintinės dydis priklauso nuo to, kokiame saugumo lygyje yra dirbama, tačiau vidutiniai atminties dydžiai yra 128 KB per failą ir 1024 KB bendros atminties.
 \\
 \hline
 ,,Firefox``
 &
-XPCOM (angl. Cross Platform Component Object Model)
+XPCOM (angl. Cross Platform Component Object Model)\cite{FIO11}
 &
-Tai galingas modelis (angl. Framework) skirtas multiplatforminės ir modulinės architektūros programų kūrimui. Šios platformos pagrindu yra sukurta pati “Firefox” naršyklė. Ši naršyklė yra gera tuo, kad jai galima rašyti įvairius įskiepius (angl. Add-ons), kurie gali išnaudoti XPCOM suteikiamus API, tame tarpe ir darbo su failais modulius. Gaunamos iš esmės neribotos galimybės.
+Tai galingas karkasas (angl. framework) skirtas multiplatforminės ir modulinės architektūros programų kūrimui. Šios platformos pagrindu yra sukurta pati ,,Firefox`` naršyklė. Ši naršyklė yra gera tuo, kad jai galima rašyti įvairius papildinius (angl. add-ons), kurie gali išnaudoti XPCOM suteikiamus API, tame tarpe ir darbo su failais modulius. Gaunamos iš esmės neribotos programų kūrimo galimybės.
 \end{longtable}
 
 Tačiau visos šios specifinės naršyklių technologijos turi keletą esminių trūkumų:
@@ -688,6 +696,31 @@ Using Partitioning in an Online Transaction Processing Environment. 2007. [Žiū
 \bibitem[EDW06]{EDW06} 
 Enterprise Data Warehouse (EDW). 2006. [Žiūrėta: 2011-06-01]. Prieiga per internetą:  \url{http://edw.berkeley.edu/documents/Enterprise%20Data%20Warehouse%20brown%20bag%20-%2010-5-06.pdf}
 
+\bibitem[IDA03]{IDA03}
+Interaktyvios duomenų analizės įrankiai šiuolaikinėje įmonėje. OLAP duomenų bazės. [Žiūrėta: 2011-06-04]. Prieiga per internetą: \url{http://www.nk.lt/programine-iranga/interaktyvios-duomenu-analizes-irankiai-siuolaikineje-imoneje-olap-duomenu-bazes/}
+
+\bibitem[DWC02]{DWC02}
+Data Warehousing Concepts. [žiūrėta: 2011-06-04]. Prieiga per internetą:  \url{http://download.oracle.com/docs/cd/B10500_01/server.920/a96520/concept.htm}
+
+\bibitem[FIA10]{FIA10}
+"Offline": What does it mean and why should I care? [Žiūrėta: 2011-06-04]. Prieiga per internetą: 
+\url{http://www.html5rocks.com/tutorials/offline/whats-offline/#toc-fileAPI}
+
+\bibitem[LSO11]{LSO11}
+What are local shared objects? [Žiūrėta: 2011-06-04]. Prieiga per internetą: \url{http://www.adobe.com/products/flashplayer/articles/lso/}
+
+\bibitem[WJA01]{WJA01}
+Java Applet. [žiūrėta: 2011-06-04]. Prieiga per internetą: \url{http://en.wikipedia.org/wiki/Java_applet}
+
+\bibitem[STG11]{STG11}
+Stopping the Gears [Žiūrėta: 2011-06-04]. Prieiga per internetą: \url{http://gearsblog.blogspot.com/2011/03/stopping-gears.html}
+
+\bibitem[UDA11]{UDA11}
+userData Behavior [Žiūrėta: 2011-06-05]. Prieiga per internetą: \url{http://msdn.microsoft.com/en-us/library/ms531424(v=vs.85).aspx}
+
+\bibitem[FIO11]{FIO11}
+File I/O [Žiūrėta: 2011-06-05]. Prieiga per internetą: \url{https://developer.mozilla.org/en/Code_snippets/File_I%2F%2FO}
+
 \end{thebibliography}
 
 \addcontentsline{toc}{section}{SĄVOKŲ APIBRĖŽIMAI}
@@ -713,13 +746,6 @@ Gali atlikti veiksmus, signalizuoti apie jų eigą, bet negali priimti komandų.
 
 \textbf{Duomenų bazė (angl. database)} - Duomenų rinkinys, susistemintas ir sutvarkytas taip, kad juo būtų galima patogiai naudotis. Duomenys gali būti įvairūs: tekstai, paveikslai, garsai. Juos tvarko duomenų bazių valdymo sistema.
 
-\addcontentsline{toc}{section}{SANTRUMPOS}
-\section*{SANTRUMPOS}
-% Gal tas kelias santrumpas tiesiog į išnašas sudėt ir nebus vargo?
-
-OLAP (angl. Online Analytical Processing) – tai technologija, leidžianti greitai, realiame laike ir įvairiais įmanomais pjūviais peržiūrėti informaciją, naudojant duomenų modelį, kuris atspindi realų organizacijos veiklos vaizdą, kaip jį supranta vartotojas, t. y. organizacijos duomenų atvaizdas yra daugiamatis.
-
-OLTP - nuo angliško termino ,,Online Transactional Processing`` - tiesioginis transakcijų apdorojimas.
 \end{document}
 
 
