--- a/oltp.tex
+++ b/oltp.tex
@@ -1,7 +1,6 @@
 \documentclass[12pt,a4paper,titlepage]{article}
 
-\usepackage[utf8x]{inputenc}
-\usepackage[lithuanian]{babel}
+\usepackage[utf8x]{inputenc} \usepackage[lithuanian]{babel}
 \usepackage[L7x]{fontenc}
 \usepackage{lmodern}
 \usepackage{setspace}
@@ -10,7 +9,8 @@
 \newcommand{\subscript}[1]{\ensuremath{_{\textrm{#1}}}}
 \usepackage{tocloft}
 \usepackage{url}      % Kad url būtų tvarkingi
-\usepackage{parskip}
+% \usepackage{parskip}
+\usepackage{indentfirst}
 \usepackage{longtable}
 \usepackage{graphicx}
 
@@ -20,10 +20,8 @@
 
 
 \include{title_page}
-\let \savenumberline \numberline
-\def \numberline#1{\savenumberline{#1.}}
-\tableofcontents
-\newpage
+\let \savenumberline \numberline \def \numberline#1{\savenumberline{#1.}}
+\tableofcontents \newpage
 
 \begin{comment}
 Įvade apibūdinamas darbo tikslas, temos aktualumas ir siekiami rezultatai. Darbo įvadas neturi būti dėstymo santrauka. Įvado apimtis 1–2 puslapiai.
@@ -180,10 +178,10 @@ Duomenų sandėliai turi tris veiklos lygius:
 
 Alternatyvus duomenų sandėlio apibrėžimas – duomenų bazė skirta ruošti ataskaitas ir duomenų analizę bei ilgalaikiam duomenų saugojimui. Duomenys į duomenų sandėlį yra pakraunami iš sistemų naudojamų kasdienėms transakcijoms, t.y. OLTP sistemų. 
 
-\subsection{OLTP ir duomenų sandėlių skirtumai
+\subsection{OLTP ir duomenų sandėlių skirtumai}
 
 \begin{longtable}{|p{3cm}|p{4.9cm}|p{4.9cm}|}
-\caption{OLTP sistemų ir duomenų sandėlių savybių palyginimas\label{table:oltpsvsdw}\cite{DWC02}}}\\
+\caption{OLTP sistemų ir duomenų sandėlių savybių palyginimas\label{table:oltpsvsdw}}\\
 %This is the header for the first page of the table...
 
 \hline \hline
@@ -445,6 +443,7 @@ Tačiau gali būti ir tokių atvejų, kada papildinių naudojimas teiktų prival
 \subsection{Specifinės naršyklių savybės}
 
 Darbo su kliento kompiuterio failine sistema specifinius modulius turi ir keletas naršyklių. 
+\newpage
 
 \begin{longtable}{|p{2cm}|p{3cm}|p{7.8cm}|}
 \caption{Specifinės naršyklių savybės darbui su kliento failine sistema \label{table:naršyklės}}\\
@@ -506,20 +505,18 @@ HTML5 standartas turi visą klasę naujovių pavadintų ,,Darbas atsijungus ir a
 \begin{itemize}
   \item Programų podėlis (angl. application cache);
   \item Vidinė atmintinė (angl. local storage, web storage);
-  \item Saityno SQL duomenų bazė (angl. web SQL database)
+  \item Saityno SQL\footnote{SQL - trumpinys angl. Structured Query Language} duomenų bazė (angl. web SQL database)
   \item Indeksuota duomenų bazė (angl. indexed database);
   \item Failų API\footnote{API (angl. Application Program Interface) - programų sąsaja.} sąsaja (angl. File API).
 \end{itemize}
-Visos šios technologinės naujovės įgalina kurti internetines programas, kurias būtų galima priskirti OLTP klasei. Dar daugiau, šios technologijos iš dalies išsprendžia klausimą, kaip panaudoti internetines programas, kai nėra interneto ryšio. Tolesniuose skyriuose bus trumpa šių technologijų apžvalga.
+Visos šios technologinės naujovės įgalina kurti internetines programas, kurias būtų galima priskirti OLTP klasei. Dar daugiau, šios technologijos iš dalies išsprendžia klausimą, kaip naudoti internetines programas, kai nėra interneto ryšio. Tolesniuose skyriuose bus trumpa šių technologijų apžvalga.
 
-\subsection{Programų podėlis (anlg. application cache)}
+\subsection{Programų podėlis}
 
-Vis didesnę svarbą turi internetinės programos, todėl darbas su jomis atsijungus prie interneto yra galimybė tas programas dar labiau pagerinti. Nors dauguma naršyklių turi padėjimo (angl. caching) mechanizmus, tačiau jie ne visada veikia taip kaip tikimasi. Šiaip problemai spręsti HTML5 standarto kūrėjai siūlu naudoti programų podėlio suteikiamas galimybes. 
-
-Pagrindiniai privalumai, kuriuos sutekia ši technologija yra:
+Vis didesnę svarbą turi internetinės programos, todėl darbas su jomis atsijungus prie interneto yra galimybė tas programas dar labiau pagerinti. Nors dauguma naršyklių turi padėjimo (angl. caching) mechanizmus, tačiau jie ne visada veikia taip, kaip tikimasi. Šiaip problemai spręsti HTML5 standarto kūrėjai siūlo naudoti programų podėlio suteikiamas galimybes. Pagrindiniai privalumai, kuriuos sutekia Programų podėlio technologija yra:
 \begin{itemize}
   \item Naršymas neprisijungus – galima naršyti internetinius puslapius neprisijungus prie interneto;
-  \item Greitis – užkešuoti resursai yra pakraunami iš vietinės atmintinės, todėl yra greitesni;
+  \item Greitis – užkešuoti resursai yra pakraunami iš vietinės atmintinės, todėl tai vyksta greičiau;
   \item Sumažinta serverių apkrova – serveriui reikia siųsti tik tuos failus, kurie buvo modifikuoti arba, kurių nėra prasmės saugoti kliento kompiuteryje.
 \end{itemize}
 Pagrindinė šios technologijos savybė yra ta, kad programuotojas gali pasakyti naršyklei, kuriuos failus reikia padėti kliento kompiuteryje. Tai yra padaroma labai paprastu būdu:
@@ -529,22 +526,21 @@ Pagrindinė šios technologijos savybė yra ta, kad programuotojas gali pasakyti
 \end{enumerate}
 Šios technologijos pritaikymas daugausia naudos duoda vartotojo grafinei sąsajai sukurti, kol yra nepasiekiamas serveris, o pati technologija nieko nesako apie transakcijų palaikymą. Šiai problemai spręsti yra sukurtos kitos technologijos.
 
-\subsection{Vidinė atmintinė (angl. local storage)}
+\subsection{Vidinė atmintinė}
 
-Dar ši technologija vadinams „DOM Storage“. Vietinė atmintinė gali būti supaprastintai suprasta kaip slapukų išplėtimas pridedant didesnės atminties palaikymą ir supaprastinant darbo su ta atmintine interfeisą. Kaip ir slapukų atveju vietinės atmintinės duomenys yra paprasti simbolinio tipo duomenys, kurie yra organizuojami atvaizdžio (ang. Map) principu – raktas-reikšmė. Tačiau iš tikrųjų ši technologija skiriasi keletu esminių aspektų, apie kuriuos iš eilės. 
+Dar ši technologija vadinama „DOM\footnote{DOM - trumpinys angl. Document Object Model} Storage“. Vietinė atmintinė gali būti supaprastintai suprasta kaip slapukų išplėtimas pridedant didesnės atminties palaikymą ir supaprastinant darbo su ta atmintine interfeisą. Kaip ir slapukų atveju vietinės atmintinės duomenys yra nestruktūrizuoti simbolinio tipo duomenys, kurie yra organizuojami atvaizdžio (ang. map) principu. Tačiau iš tikrųjų ši technologija skiriasi keletu esminių aspektų, apie kuriuos iš eilės. 
 
-Lokali saugykla yra skirstoma į dvi dalis: sesijos (ang. session) ir nuolatinės (angl. local) saugyklos. Sesijos atmintinė yra naudojama, kol klientas yra prijungtas prie internetinio puslapio arba kol internetinis puslapis (ar naršyklės kortelė, ar naršyklės langas) nėra uždarytas. Kai puslapis yra uždaromas visa atmintis sukaupta sesijos atmintinėje yra ištrinama. Nuolatinės saugyklos atveju atmintinėje esantys duomenys nėra ištrinami uždarius internetinį puslapį – ji lieka kliento kompiuterio atmintinėje tarp naršyklės sesijų, todėl tinka duomenų saugojimui ilgą laiką.
+Lokali saugykla yra skirstoma į dvi dalis: sesijos (ang. session) ir nuolatinės (angl. local) saugyklos. Sesijos atmintinė yra naudojama, kol klientas yra prijungtas prie tinklalapio arba kol tinklalapis (ar naršyklės kortelė, ar naršyklės langas) nėra uždarytas. Kai tinklalapis yra uždaromas visa atmintis sukaupta sesijos atmintinėje yra ištrinama. Nuolatinės saugyklos atveju atmintinėje esantys duomenys nėra ištrinami uždarius naršytą tinklalapį – ji lieka kliento kompiuterio atmintinėje tarp naršyklės sesijų, todėl tinka duomenų saugojimui ilgą laiką.
 
-Būtina paminėti, kad vietinės atmintinės technologija turi problemų su transakcijų palaikymu – pvz. aplikacija atidaryta dvejose kortelėse ir viena kortelė įrašinėja duomenis, o kita tuo pat metu pradeda juos skaityti iš tos pačios atmintinės – šioje situacijoje neaišku ar rezultatai bus tokie kokių tikimasi.
+Ši technologija gali gana stipriai prisidėti prie greitesnių programų kūrimo, nes ji gali pakeisti slapukų naudojimą. Slapukai lėtina programos veikimą, nes jie turi būti perduoti serveriui kaskart kreipiantis į jį. Vienas iš būdų kaip išvengti šios problemos yra kaip galima labiau sumažinti slapukų dydį. Kitas – naudoti vietinės atmintinės galimybes. Ši technologija yra geresnė, nes jos visų duomenų nereikia kaskart perdavinėti serveriui. Dar daugiau, ši technologija turi elegantiškesnį darbo interfeisą. Vietinė atmintinė gali būti naudojama vietoj slapukų daugelyje atvejų.
 
-Ši technologija gali gana stipriai prisidėti prie greitesnių programų kūrimo, nes ji gali pakeisti slapukų naudojimą. Slapukai lėtina aplikacijos veikimą, nes jie turi būti perduoti serveriui kaskart kreipiantis į jį. Vienas iš būdų kaip išvengti šios problemos yra kaip galima labiau sumažinti slapukų dydį. Kitas – naudoti vietinės atmintinės galimybes. Ši technologija yra geresnė, nes jos visų duomenų nereikia kaskart perdavinėti serveriui. Dar daugiau, ši technologija turi elegantiškesnį darbo interfeisą. Vietinė atmintinė gali būti naudojama vietoj slapukų daugelyje atvejų.
+Būtina paminėti, kad vietinės atmintinės technologija turi keletą problemų. Visų pirma su transakcijų palaikymu – pvz. programa atidaryta dvejose kortelėse ir viena kortelė įrašinėja duomenis, o kita tuo pat metu pradeda juos skaityti iš tos pačios atmintinės – šioje situacijoje neaišku ar rezultatai bus tokie kokių tikimasi. Antra, jei duomenų kiekiai darosi dideli, paieška jose stipriai letėja, nes nėra naudojami jokie indeksai.
 
+\subsection{Saityno SQL duomenų bazė}
 
-\subsection{Saityno SQL duomenų bazė (angl. web SQL database)}
+Visų pirma reikėtų paminėti, kad saityno SQL duomenų bazės standarto plėtojimas yra nutrauktas 2010 metų lapkričio mėnesį. Nors ši technologija ir nėra oficiali HTML5 standarto dalis, tačiau ji yra įgyvendinta kai kurių didžiųjų naršyklių, todėl ji yra įdomi kaip karkasas, kuriuo remiantis būtų galima kurti visokeriopo funkcionalumo taikomąsias programas. Šioje darbo dalyje apžvelgsime svarbiausias šios technologijos savybes bei galimybes, remiantis šia technologija, sukurti OLTP aplikacijas.
 
-Visų pirma reikėtų paminėti, kad šio standarto plėtojimas yra nutrauktas 2010 metų lapkričio mėnesį. Nors ši technologija ir nėra oficiali HTML5 standarto dalis, tačiau ji yra įgyvendinta kai kurių didžiųjų naršyklių, todėl ji yra įdomi kaip dalis, kuria remiantis būtų galima kurti visokeriopo funkcionalumo taikomąsias programas. Šioje darbo dalyje apžvelgsime svarbiausias šios technologijos savybes bei galimybes sukurti OLTP aplikacijas.
-
-Lokali SQL duomenų bazė, kaip sako jau pats pavadinimas, yra kliento kompiuteryje esanti duomenų bazė, kuri suteikia pilną SQL funkcionalumą internetinėms aplikacijoms. Ši technologija pagal funkcionalumą ir sudėtingumą yra kaip ir tipinė reliacinė SQL DB. Ji veikia SQLite duomenų bazių valdymo sistemos pagrindu, kuri yra labai panaši į plačiai naudojamą MySQL duomenų bazių valdymo sistemą.
+Saityno SQL duomenų bazė yra kliento kompiuteryje esanti duomenų bazė, kuri suteikia pilną SQL funkcionalumą internetinėms aplikacijoms. Ši technologija pagal funkcionalumą ir sudėtingumą yra kaip ir tipinė reliacinė SQL DB. Ji veikia SQLite duomenų bazių valdymo sistemos pagrindu, kuri yra labai panaši į kitas populiariausias duomenų bazių valdymo sistemą.
 
 OLTP sistemoms yra labai svarbus transakcijų palaikymas. Ši technologija yra kaip tik tai ko reikia, nes ji kaip ir visos kitos duomenų bazių valdymo sistemos pilnai palaiko transakcijas. 
 
@@ -577,29 +573,49 @@ OLTP sistemoms yra labai svarbus transakcijų palaikymas. Ši technologija yra k
 \hline \hline
 \endlastfoot
 \hline 
-\begin{itemize}
-  \item Galima kurti labai funkcionalias programas;
-  \item Galima saugoti labai sudėtingos struktūros duomenis;
-  \item Galima kurti labai funkcionalius naršyklių įskiepius;
-  \item Puikus įrankis duomenų saugojimui tokių aplikacijų kaip elektroninis paštas programoms, kai jos yra neprisijungusios prie interneto;
-  \item Nelieka problemų, kai su ta pačia programa dirbama atskirose kortelėse ar languose, nes tas problemas sutvarko duomenų bazių valdymo sistema.
-  \item Duomenų vientisumas užtikrinamas, nes pilnai palaikomos transakcijos.
-\end{itemize}
+Galima saugoti labai struktūrizuotus duomenis
 &
-\begin{itemize}
-  \item Internetinės aplikacijos gali tapti labai sudėtingomis, brangiomis, nestabiliomis ir t.t.
-  \item Palaikymo problema: naršyklės arba palaiko, arba palaiko dalinai, arba visai nepalaiko šio standarto.
-  \item Gana ribotas pritaikomumas, nes dalis naršyklių nepalaiko šios technologijos, todėl gali tekti kurti keletą tos pačios programos versijų, kad visa tai veikti pas daugelį klientų. Labiausiai tinka naršyklių įskiepių kūrimui.
-  \item Kadangi yra panašias galimybes siūlančių technologijų (pvz. Lokali saugykla), lokalios SQL duombazės turėtų būti skirtos stambiems duomenis saugoti kliento kompiuteryje, kas vargu ar yra pagirtina.
-\end{itemize}
+Internetinės programos gali tapti neelegantiškomis, sudėtingomis, brangiomis, nestabiliomis ir t.t.
+\\
+\hline
+Galima kurti labai funkcionalius naršyklių papildinius
+&
+Palaikymo problema: naršyklės arba palaiko, arba palaiko dalinai, arba visai nepalaiko šio standarto
+\\
+\hline
+Tinka programų (pvz. elektroninio pašto klientai) dirbančių atsijungus duomenų saugojimui
+&
+ Ganaribotas pritaikomumas, nes dalis naršyklių nepalaiko šios technologijos, todėl gali tekti kurti keletą tos pačios programos versijų, kad visa tai veiktų pas daugelį klientų.
+\\
+\hline
+Nelieka sinchronizavimo problemų, kai su ta pačia programa dirbama atskirose kortelėse ar languose, nes tas problemas sutvarko duomenų bazių valdymo sistema.
+&
+Kadangi yra panašias galimybes siūlančių technologijų (pvz. vietinė atmintinė), saityno SQL duombazės turėtų būti skirtos daugiau stambiems duomenis saugoti kliento kompiuteryje, kas vargu ar yra gero stiliaus bruožas internetinėms programoms.
+\\
+\hline
+Duomenų vientisumas užtikrinamas, nes pilnai palaikomos transakcijos
+&
+Nepatogu naudoti su JavaScript, nes yra tik keletas metodų, o užklausos yra tų metodų parametrai, kurie yra paprastos simbolių eilutės.
 \end{longtable}
 
-Vienas iš gražesnių lokalios SQL duomenų bazės naudojimo pavyzdžių būtų žinučių programa. Jei žinutės būtų saugomos kliento kompiuteryje, tai būtų galima sutaupyti kiekvieną kartą nesikreipiant į serverį, kai norima atlikto tokias operacijas kaip: paieška, filtravimas, rykiavimas. Dar daugiau, būtų galima atlikinėti paieškas ar kitas darbo su žinutėmis oepracijas ties kiekvienu mygtuko paspaudimu, taip programas padarant labiau interaktyviomis.
+Vienas iš geresnių saityno SQL duomenų bazės naudojimo pavyzdžių būtų žinučių programa. Jei žinutės būtų saugomos kliento kompiuteryje, tai būtų galima sutaupyti kiekvieną kartą nesikreipiant į serverį, kai norima atlikto tokias operacijas kaip: žinučių paieška, filtravimas, rykiavimas. Dar daugiau, būtų galima atlikinėti paieškas ar kitas darbo su žinutėmis operacijas ties kiekvienu mygtuko paspaudimu, taip programas padarant interaktyvesnėmis.
 
-\subsection{Indeksuota duomenų bazė (anlg. indexed DB)}
+\subsection{Indeksuota duomenų bazė}
 
-[TODO]
-Indeksuotos duomenų bazės technologija skirta duomenų saugojimui kliento kompiuteryje. Ji suteikia galimybę saugoti sąlyginai didelius duomenų kiekius – [TODO] ir greitai paieškai tuose duomenyse, nes yra naudojami indeksai. Vienas pagrindinių tikslų yra saugoti didelius duomenų kiekius darbui neprisijungus prie tinklo. Kad kompiuteris nebūtų užterštas nepageidaujamais duomenimis, naršyklė paklaus naudotojo ar jis sutinka sukurti dar vieną DB. Ir svarbu paminėti, kad naujos duomenų bazės kūrimas yra užblokuotas kai naršymas vyksta privačiu režimu.Indeksuota duomenų bazė yra kaip mišrūnas dviejų aukščiau išvardytų duomenų saugojimo būdų: raktas-reikšmė poros, bet jas dar galima indeksuoti, todėl paieška tampa žymiai greitesnė.
+Indeksuotos duomenų bazės technologija skirta duomenų saugojimui kliento kompiuteryje. Vienas pagrindinių tikslų yra saugoti didelius duomenų kiekius darbui atsijungus. Ši technologija yra kaip kompromisas tarp vidinės atmintinės paprastumo ir saityno duomenų bazės sudėtingumo. Ji suteikia galimybę saugoti sąlyginai didelius struktūrizuotų (nors neturinčių bendros schemos) duomenų kiekius - pradinis DB dydis yra 5MB, bet esant reikalui atmintinę galima padidinti. Taip pat ši technologija leidžia greitas paieškas saugomuose duomenyse - to pasiekiama naudojant indeksavimo mechanizmus. Indeksavimas atliekamas tik kažkokiai vienai objekto savybei (angl. property). 
+
+Kadangi šios technologijos kūrėjai kalba apie sąlyginai didelius duomenų kiekius, tad iškyla spartos klausimas, nes kaip žinia JavaScript naršyklėje veikia tik viena gija, todėl jai davus daug darbo (kitaip tariant bus atliekama didelė transakcija) visi kiti procesai naršyklėje laukia kol tas darbas bus atliktas. Vienalaikiško veikimo užtikrinimas yra svarbus OLTP sistemoms. Šis klausimas yra išspręstas naudojant asinchroninius kvietimus. Tokiu būdu visas darbas yra atliekamas foniniu režimu, o programa yra pilnai interaktyvi.
+
+Saugumo klausimai yra sprendžiami leidžiant klientui pačiam pasakyti ar galima sukurti naują indeksuotą DB - prieš sukuriant naują DB yra klausiama kliento ar jis duoda leidimą ją sukurti. Jei naršymas vyksta kokiame nors viešame kompiuteryje (pvz. bibliotekoje), tai bendru atveju siūloma dirbti privačiu režimu. Dirbant privačiu režimu indeksuotų duomenų bazių kūrimas yra uždraustas.
+
+Ši technologija turi keletą trūkumų:
+\begin{itemize}
+  \item Norint pridėti ar panaikinti indeksus, reikia būtinai pakeisti DB versiją, kurių ne visada patogu administruoti;
+  \item Nėra paprasto būdo atlikti duomenų rykiavimo, rūšiavimo operacijas - viską reikia pasidaryti ,,Rankutėmis``;
+  \item Nepalaikomi lentelių (angl. object stores) sujungimai (angl. join);
+  \item Norint atlikti paiešką pagal kažkokią saugomų objektų savybę, ta savybė būtinai turi būtų suindeksuota;
+  \item Indeksai gali užimti daug atminties. 
+\end{itemize}
 
 \subsection{Failų API}
 [TODO]
@@ -620,7 +636,7 @@ Bendru atveju duomenų kiekiui pasiekus maksimalią ribą, naršyklė gali pakla
 
 \subsection{Naujųjų technologijų palaikymas naršyklėse}
 
-Situacija naršyklių rinkoje dabar yra tokia, kad ne visos naršyklės viską palaiko ir net ir tos, kurios palaiko, palaiko ne viską vienodai. Bet visų šių technologijų tikslai yra du (įgalinti WEB aplikacijas veikti offline režimu, ir padidinti darbo spartą) ir jie niekaip nesako, kad šių technologijų nepalaikymas reikš, kad jų pagalba pagamintos programos neveiks su visomis naršyklėmis – blogiausiu atveju viskas veiks tik online režimu.
+Situacija naršyklių rinkoje dabar yra tokia, kad ne visos naršyklės viską palaiko ir net ir tos, kurios palaiko, palaiko ne viską vienodai. Bet visų šių technologijų tikslai yra du (įgalinti internetines programas dirbti atsijungus, ir padidinti darbo spartą) ir jie niekaip nesako, kad šių technologijų nepalaikymas reikš, kad jų pagalba pagamintos programos neveiks su visomis naršyklėmis – blogiausiu atveju viskas veiks tik prisijungus.
 
 \begin{longtable}{|p{6.4cm}|p{6.4cm}|}
 \caption{Naujųjų technologijų palaikomumas \label{table:palaikomumas}}\\
@@ -677,11 +693,11 @@ Labiausiai palaikoma naujoji technologija, galinti rimtai prisidėti kuriant int
 
 Šiame darbe buvo išnagrinėtos OLTP sistemos: apibrėžta tokių sistemų klasė bei peržvelgtos pagrindinės tokių sistemų savybės. Šios sistemos yra sudėtingos dėl griežtų joms keliamų reikalavimų.
 
-Ruošiant medžiagą darbui pastebėta, jog OLTP trūksta aiškios atskirties tarp OLTP ir OLAP sistemų. Todėl visas skyrius buvo skirtas išsiaiškinti pagrindinius tokių sistemų skirtumus.
+Ruošiant medžiagą darbui pastebėta, jog trūksta aiškumo skiriant OLTP nuo OLAP sistemų. Todėl visas skyrius buvo skirtas išsiaiškinti pagrindinius tokių sistemų panašumus ir skirtumus.
 
-Didžiausias dėmesys šiame darbe buvo skirtas technologijoms, kuriomis galima grįsti OLTP sistemų, veikiančių tiesiog interneto naršyklėse, veikimą atsijungus nuo saityno. Buvo apžvelgtos jau keletą ar kelioliką metų egzistuojančios standartinės technologijos: slapukai bei papildiniais (,,Flash``, programėlės, ,,Google Gears`` grįsti sprendimai. Taip pat apžvelgti ir paskirų naršyklių gamintojų mėginimai sukurti sprendimus, leidžiančius internetinėms svetainėms dirbti su kliento kompiuteryje esančia atmintine.
+Didžiausias dėmesys šiame darbe buvo skirtas technologijoms, kuriomis galima grįsti OLTP sistemų, veikiančių tiesiog interneto naršyklėse, veikimą atsijungus nuo saityno. Buvo apžvelgtos jau keletą ar kelioliką metų egzistuojančios standartinės technologijos: slapukai bei papildiniais (,,Flash``, programėlės, ,,Google Gears``) grįsti sprendimai. Taip pat apžvelgti ir paskirų naršyklių gamintojų mėginimai sukurti sprendimus, leidžiančius internetinėms svetainėms dirbti su kliento kompiuteryje esančia atmintine.
 
-Yra svarbu apžvelgti, kokios yra internetinių technologijų vystymosi tendencijos, nes nuolat didėja interneto reikšmė. Pastaraisiais metais yra daug dirbama, ties naujų interneto standartų kūrimu. Tarp naujųjų standartų yra tokių, kurie gali kokybiškai pagerinti internetinių OLTP sistemų veikimą ta prasme, kad internetinės programos gali veikti atsijungusios ir pasiekti kliento atmintinę. Įvertinus siūlomas naujoves (programų podėlį, vidinę atmintinę, saityno SQL duomenų bazę, indeksuotą duomenų bazę, failų API), belieka sėsti prie klaviatūrų ir kurti naujo tipo programas, kurios bus greitesnės, mobilesnės ir naudingesnės
+Įvertinau naujuosius interneto standartus, kurie gali kokybiškai pagerinti internetinių OLTP sistemų veikimą ta prasme, kad internetinės programos gali veikti atsijungusios ir pasiekti kliento atmintinę. Įvertinus siūlomas naujoves (programų podėlį, vidinę atmintinę, saityno SQL duomenų bazę, indeksuotą duomenų bazę, failų API sąsaja), belieka sėsti prie klaviatūrų ir kurti naujo tipo programas, kurios bus greitesnės, mobilesnės ir naudingesnės.
 
 \addcontentsline{toc}{section}{LITERATŪRA} 
 
@@ -730,10 +746,19 @@ File I/O [Žiūrėta: 2011-06-05]. Prieiga per internetą: \url{https://develope
 
 \textbf{Papildinys (angl. add on; add-in; plug-in; plugin} - papildomas komponentas, įtaisytas į programą, kompiuterį arba jo įtaisą ir išplečiantis jo galimybes.[DGJ08]
 
-\textbf{Programėlės (angl. applet)} - Nedidelė programa, kuri yra serveryje ir gali būti iškviesta iš tinklalapio. Vykdoma kliento naršyklėje.
-Programėlės dažniausiai rašomos Javos kalba. Tam, kad jos galėtų būti vykdomos, naršyklė turi būti suderinama su Java ir parinkta atitinkama programėlių vykdymo nuostata. Javos programėlės pasižymi tuo, kad gali pagyvinti tinklalapį, suteikti jam dinamiškumo ir gali būti vykdomos įvairiose operacinėse sistemose.[DGJ08]
+\textbf{Programėlės (angl. applet)} - Nedidelė programa, kuri yra serveryje ir
+gali būti iškviesta iš tinklalapio. Vykdoma kliento naršyklėje. Programėlės
+dažniausiai rašomos Javos kalba. Tam, kad jos galėtų būti vykdomos, naršyklė
+turi būti suderinama su Java ir parinkta atitinkama programėlių vykdymo
+nuostata. Javos programėlės pasižymi tuo, kad gali pagyvinti tinklalapį,
+suteikti jam dinamiškumo ir gali būti vykdomos įvairiose operacinėse
+sistemose.[DGJ08]
 
-\textbf{Podėlis (angl. cache)} - atmintis, skiriama laikinai padėti programos duomenims, kurių gali vėliau prireikti. Prisipilžius podėliui programa, prieš įrašydama naujus duomenis, pašalina dalį anksčiau įrašytų. Paprastai šalinami tie duomenys, kurių, kaip tikimasi, mažiausiai prireiks, pavyzdžiui, seniausiai įrašyti arba rečiausiai naudoti.[DGJ08]
+\textbf{Podėlis (angl. cache)} - atmintis, skiriama laikinai padėti programos
+duomenims, kurių gali vėliau prireikti. Prisipilžius podėliui programa, prieš
+įrašydama naujus duomenis, pašalina dalį anksčiau įrašytų. Paprastai šalinami
+tie duomenys, kurių, kaip tikimasi, mažiausiai prireiks, pavyzdžiui, seniausiai
+įrašyti arba rečiausiai naudoti.[DGJ08]
 
 \textbf{Slapukas (angl. cookie)} - duomenų rinkinys, kurį sukuria svetainė ir įrašo į lankytojo kompiuterį. Tai informacija, kuri paspartina arba supaprastina darbą vėl kreipiantis į tą pačią svetainę, pavyzdžiui, įsimenama anksčiau užpildyta anketa ir nebereikia jos pildyti iš naujo.[DGJ08]
 
@@ -742,11 +767,5 @@ Programėlės dažniausiai rašomos Javos kalba. Tam, kad jos galėtų būti vyk
 \textbf{Foninė programa (angl. background application, background program)} - Programa, nesanti veikiamajame lange.
 Gali atlikti veiksmus, signalizuoti apie jų eigą, bet negali priimti komandų.[DGJ08]
 
-\textbf{Klientas (angl. client)} - Aptarnaujamas asmuo: pirkėjas, užsakovas, abonentas, svetainės lankytojas arba kitokių paslaugų prašytojas bei vartotojas. Paprastai naudojasi kliento programa, kuri bendrauja su paslaugas teikiančia serverio programa.
-
-\textbf{Duomenų bazė (angl. database)} - Duomenų rinkinys, susistemintas ir sutvarkytas taip, kad juo būtų galima patogiai naudotis. Duomenys gali būti įvairūs: tekstai, paveikslai, garsai. Juos tvarko duomenų bazių valdymo sistema.
 
 \end{document}
-
-
-pasižiūrėt, kaip reikia dirbt su setcounter komanda.
