Įdėta daugiau informacijos į README failą

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Ši repozitorija yra skirta mano kursinio darbo source code'ui. Kursinis kaip kurinis, bet poreikis valdyti jo source atsirado, nes kursinis bus rašomas su latex sistema. Taigi pirmyn prie darbų!
+
+Pagrindinis darbo failas yra oltp.tex
+
+Visų kitų failų pavadinimai daugiau mažiau paaiškina, koks yra tų failų turinys.
